--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -543,15 +543,17 @@ Criticisms of the experience were primarily levelled at aspects of the system th
 
 \label{chapter-eval-2}
 
-This chapter recounts the second stage of evaluation conducted with the Mirrorshades platform, in which the focus was upon investigating how certain aspects of the platform's implementation affected the overall parallel reality experience. A first user study compared between different manners of transitioning between RW and VR visual stimuli, while a second investigated changes to the default view. The results of these studies were used to establish a set of best practices for future parallel reality endeavours.
+This chapter recounts the second stage of evaluation conducted with the Mirrorshades platform, in which the focus was upon investigating how certain aspects of the platform's implementation affected the overall parallel reality experience. A first user study compared between different manners of transitioning between RW and VR visual stimuli, while a second investigated changes to the balance between real and virtual visuals in the default view. The results of these studies furthered the establishment of a set of best practices to inform future parallel reality endeavours.
 
 %=========================================================================================================
 
 \section{Overview}
 
-Stage 2 of the evaluation comprised two parts. The first, stage 2.1, focussed upon assessing participants' reactions and preferences toward four different transition styles (the first aspect identified in section \ref{design-considerations-for-rw-vr-transitions}). The second, stage 2.2, looked at reactions and preferences in response to two different default views comprising RW/VR mixes (the second aspect identified in section \ref{design-considerations-for-rw-vr-transitions}). In terms of the combined Milgram/Waterworh model these evaluations pertain to assessing the effect upon participants' focus of attention (the severity of the break in presence) when performing oscillations along the locus of attention axis. Stage 2.1 investigated oscillations wherein the default view was 100\% RW, with participants performing oscillations using different transition implementations between the RW extreme of the locus of attention axis and other points upon the it (such as in figure \ref{transition-rw-vr-hard.png}), while stage 2.2 looked at oscillations wherein the default view was a mix of RW and VR, limiting how far toward the RW extreme of the locus of attention axis the participant could reach (such as in figure \ref{transition-mix-vr.png}).
+Stage 2 of the evaluation comprised two parts. The first, stage 2.1, focussed upon assessing participants' reactions and preferences toward four different transition styles (the first aspect identified in section \ref{design-considerations-for-rw-vr-transitions}). The second, stage 2.2, looked at reactions and preferences in response to two different default views comprising RW/VR mixes (the second aspect identified in section \ref{design-considerations-for-rw-vr-transitions}).
 
-While stage 1 of the evaluation showed the suitability of applying a parallel reality platform to the particular use case of virtual heritage, stage 2 has wider ranging implications for informing implementation of parallel reality systems in general.
+In terms of the combined Milgram/Waterworh model these evaluations pertained to assessing the effect upon participants' focus of attention, assessing the severity of the break in presence in the terms of the extended vacancy problem, when performing oscillations along the locus of attention axis. Stage 2.1 investigated oscillations wherein the default view was 100\% RW, with participants performing oscillations using different transition implementations between the RW extreme of the locus of attention axis and other points upon the it (such as in figure \ref{transition-rw-vr-hard.png}). Stage 2.2 looked at oscillations wherein the default view was a mix of RW and VR, limiting how far toward the RW extreme of the locus of attention axis the participant could reach (such as in figure \ref{transition-mix-vr.png}).
+
+While stage 1 of the evaluation focussed primarily upon assessing the feasibility of the concept and its worth in a virtual heritage scenario, stage 2 has broader implications for informing implementation of future parallel reality systems in general.
 
 \begin{figure}[ht]
 	\begin{center}
@@ -579,7 +581,7 @@ Under these categories one can consider the log data recorded by the Mirrorshade
 \label{presence-questionnaires}
 Due to the nature of the Mirrorshades platform and the adoption of the Waterworth model of the break in presence concept, most established presence questionnaires could not be directly applied. These presence questionnaires have predominantly been written for application to `full immersion' VR scenarios in which the user is immersed in a VR (or remote, in the case of telepresence) environment at the intentional exclusion of stimuli from their RW environment, adopting the Slater and Steed model of the break in (virtual) presence concept, upholding the notion of \textit{``VR as portal to a private world of simulation where physical senses are immersed by prosthetics, where users temporarily `forget' their primary sensory world''}~\cite{Heim2014}.
 
-Illustrated in reference to an embodied cognition framework, as for mediated presence \textit{``action is more important than perception''}~\cite{Giuseppe2014}, the sense of presence in these full immersion VR scenarios is argued to develop from the construction of a spatial-functional mental model of the VR environment, through combination of representation of bodily actions as being possible in the VR environment combined with suppression of incompatible sensory input from the RW environment~\cite{Schubert2001}. A break in presence can result here from a mismatch between the predicted state of a virtual object using a motor representation and the actual state of the object after enacting that motor representation~\cite{Giuseppe2014}.
+Illustrated in reference to an embodied cognition framework, as for mediated presence \textit{``action is more important than perception''}~\cite{Giuseppe2014}, the sense of presence in these full immersion VR scenarios is argued to develop from the construction of a spatial-functional mental model of the VR environment. This is achieved by the representation of bodily actions as being possible in the VR environment in combination with suppression of incompatible sensory input from the RW environment~\cite{Schubert2001}. A break in presence can result here from a mismatch between the predicted state of a virtual object using a motor representation and the actual state of the object after enacting that motor representation~\cite{Giuseppe2014}.
 
 However considering a parallel reality scenario within the same framework, sensory input from a RW environment that features high spatial equivalence and an equivalent vantage point with the VR environment is not incompatible, but instead complimentary and we do not wish for the user to `forget' about either `sensory world'. Whereas a full immersion VR experience attempts to create in the user's mind a new spatial-functional model that exists separate to, likely incompatible with and requiring suppression of the model of their RW surroundings, parallel reality systems should instead be considered as enhancing the user's existing model of their RW surroundings, or alternatively as creating a complementary model that sits parallel to the RW model and can be attended to in tandem. The effect of this complimentary nature of the environments can be considered within the context of Waterworth and Waterworth's `three layers of presence'~\cite{Mantovani2010, Giuseppe2014} that constitute:
 
@@ -605,21 +607,21 @@ The implication this has upon the suitability of established presence questionna
 
 In this stage of the evaluation into the Mirrorshades parallel reality platform however, the aim was to assess presence in terms of the user's position upon the focus of attention axis, to assess the severity of breaks in presence considered under the Waterworth definition as deflections upon the focus of attention axis from the presence extreme in the direction of the absence extreme, representing increased cognitive load caused by performing a transition between two environments. Instead of assessing allocation of locus of attention between two \textit{incompatible} sets of environmental stimuli, this stage of evaluation studied the impact that a locus of attention oscillating between \textit{complimentary} sets of environmental stimuli has upon the participant's focus of attention.
 
-Instead of issuing a questionnaire designed to determine the balance between virtual presence and real presence, this evaluation instead needed to employ a questionnaire that provided insight into the balance between presence (whether real or virtual) and absence. Many established presence questionnaires that feature wording and weighting of questions associating negativity to awareness of the stimuli from the RW environment were thus unsuitable. Whilst this approach is ideal for a full immersion VR scenario in which awareness of the VR environment at the complete exclusion of the RW environment is the ultimate goal, it does not apply well to a parallel reality scenario in which the ultimate goal is to imbue the user with the ability (\& desire) to freely transition between both RW and VR environments, wherein maintaining an awareness of one environment while perceiving stimuli from the other is beneficial, rather than detrimental, to the overall experience.
+Thus instead of issuing a questionnaire designed to determine the balance between virtual presence and real presence, this evaluation needed to employ a questionnaire that provided insight into the balance between presence (whether real or virtual) and absence. Many established presence questionnaires that feature wording and weighting of questions associating negativity to awareness of the stimuli from the RW environment were thus unsuitable. Whilst this approach is ideal for a full immersion VR scenario in which awareness of the VR environment at the complete exclusion of the RW environment is the ultimate goal, it does not apply well to a parallel reality scenario in which the ultimate goal is to imbue the user with the ability (\& desire) to freely transition between both RW and VR environments, wherein maintaining an awareness of one environment while perceiving stimuli from the other is beneficial, rather than detrimental, to the overall experience.
 
-Witmer and Singer's presence questionnaire~\cite{Witmer1998} for example, poses several questions that directly enquire about aspects of the virtual environment (\textit{``13. How involved were you in the virtual environment experience?''}) but poses no questions that pertain to the RW environment other than a single comparison between VR and RW (\textit{``7. How much did your experiences in the virtual environment seem consistent with your real world experiences?''}, an assessment touching on perceived realism and of how well bodily actions were represented as possible in the VR environment). Other questionnaires such as that from Slater and Steed, in which participants walked through a VR field of trees~\cite{Slater1998}, are less extreme in their weighting toward questions only about VR, asking questions both directly about the VR environment (\textit{``Please rate your sense of being in the field among the plants''}) but also enquiring as to the sense of being in the RW environment in a neutral tone (\textit{``During the time of the experience, which was strongest on the whole, your sense of being in the virtual field, or of being in the real world of the laboratory?''}). However even this permeates an `either or' implication to the two environments, emphasising their incompatibility and separateness.
+Witmer and Singer's presence questionnaire~\cite{Witmer1998} for example, poses several questions that directly enquire about aspects of the virtual environment (\textit{``13. How involved were you in the virtual environment experience?''}) but poses no questions that pertain to the RW environment other than a single comparison between VR and RW (\textit{``7. How much did your experiences in the virtual environment seem consistent with your real world experiences?''}, an assessment touching on perceived realism and of how well bodily actions were represented as possible in the VR environment). Other questionnaires such as that from Slater and Steed, in which participants walked through a VR field of trees~\cite{Slater1998}, are less extreme in their weighting toward questions only about VR, asking questions about the VR environment (\textit{``Please rate your sense of being in the field among the plants''}) but also enquiring as to the sense of being in the RW environment in a neutral tone (\textit{``During the time of the experience, which was strongest on the whole, your sense of being in the virtual field, or of being in the real world of the laboratory?''}). However even this permeates an `either or' implication to the two environments, emphasising their incompatibility and separateness.
 
 %=========================================================================================================
 
 \subsection{The Igroup Presence Questionnaire}
 \label{igroup-presence-questionnaire-explanation}
-The igroup presence questionnaire (IPQ, included as appendix \ref{appendix-igroup-presence-questionnaire})~\cite{Schubert2001} assesses presence based upon three factors: spatial presence (SP), involvement (INV) and realness (REAL). While SP questions assess how much bodily actions are represented as possible in the VR environment and REAL questions assess the perceived `realness' of the VR environment by eliciting direct comparisons with the RW environment, INV questions assess suppression of sensory input from the RW environment. INV questions are worded in a manner that does not associate attention paid to this RW sensory input as inherently negative, or even such that these stimuli are considered incompatible, reducing risk of negative bias when the questionnaire is applied to a scenario in which attention paid to RW stimuli is encouraged, such as an application of parallel reality.
+The igroup presence questionnaire (IPQ, included as appendix \ref{appendix-igroup-presence-questionnaire})~\cite{Schubert2001} assesses presence based upon three factors: spatial presence (SP), involvement (INV) and realness (REAL). While SP questions assess how much bodily actions are represented as possible in the VR environment and REAL questions assess the perceived `realness' of the VR environment by eliciting direct comparisons with the RW environment, INV questions assess suppression of sensory input from the RW environment. However INV questions are worded in a manner that does not associate attention paid to this RW sensory input as inherently negative, or even such that these stimuli are considered incompatible, reducing risk of negative bias when the questionnaire is applied to a scenario in which attention paid to RW stimuli is encouraged, such as an application of parallel reality.
 
 For a well implemented full immersion VR experience that elicits a high sense of virtual presence in the user, one would expect their IPQ results to score highly in all three factors. As discussed by Constantin~\cite{Constantin2003}, SP3 (\textit{``I did not feel present in the virtual space''}, anchored between \textit{``did not feel''} and \textit{``felt present''}) and INV2 (\textit{``I was not aware of my real environment''}, anchored between \textit{``fully disagree''} and \textit{``fully agree''}) would even seem to be fairly directly tied together, as a high involvement in the RW environment would intuitively reduce spatial presence in the VR environment by hampering the sense that bodily actions are possible there. The vacancy problem that effects this style of VR experience would be demonstrated upon IPQ results as a reduction in INV scores (greater awareness of the real environment) causing a reduction of similar magnitude in SP scores (less experienced presence in the virtual space).
 
-However in a parallel reality scenario that features high spatial equivalence between its constituent RW and VR environments, this tie between SP and INV was not expected to demonstrate so strongly. Due to the spatial equivalence between the two environments and the fact that the user's view of the virtual is of the equivalent vantage, bodily actions in the VR environment are inherently compatible with those in the RW environment - they could even be said to mimic or imitate them. Thus SP may score highly even when INV scores low, as RW sensory input isn't suppressed but in fact encouraged. It may even be the case that an inverse relationship presents between SP3 and INV2, as heightened awareness of the RW environment leads the user to a more believable representation of bodily actions in the VR environment as possible, increasing SP as RW bodily actions are shared (`possible') with the VR environment. Such a discrepancy between INV and SP scores for a parallel reality experience would demonstrate the ability of the concept to mitigate the vacancy problem that effects full immersion VR experiences where the scores remain more closely tied. In fact it would not be an inductive leap to interpret the magnitude of this discrepancy between INV and SP scores as a direct indication of how well the platform managed to mitigate the vacancy problem.
+In a parallel reality scenario that features high spatial equivalence between its constituent RW and VR environments, this tie between SP and INV was not expected to demonstrate so strongly. Due to the spatial equivalence between the two environments and the fact that the user's view of the virtual is of the equivalent vantage, bodily actions in the VR environment are inherently compatible with those in the RW environment - they could even be said to mimic or imitate them. Thus SP may score highly even when INV scores low, as RW sensory input isn't suppressed but in fact encouraged. It may even be the case that an inverse relationship presents between SP3 and INV2, as heightened awareness of the RW environment leads the user to a more believable representation of bodily actions in the VR environment as possible, increasing SP as RW bodily actions are shared (`possible') with the VR environment. Such a discrepancy between INV and SP scores for a parallel reality experience would demonstrate the ability of the concept to mitigate the vacancy problem that effects full immersion VR experiences where the scores remain more closely tied. In fact it would not be an inductive leap to interpret the magnitude of this discrepancy between INV and SP scores as a direct indication of how well the platform managed to mitigate the vacancy problem.
 
-A conservative expectation for the results of the IPQ when applied to a parallel reality experience would be for generally lower INV scores than for a full immersion VR experience but without drastic reduction in SP scores. An optimistic expectation for a well implemented parallel reality experience would be for lower INV scores and \textit{heightened} SP scores - that reinforcement of bodily actions within the RW environment lead to an increase in experienced spatial presence in the VR environment.
+A conservative expectation for the results of the IPQ when applied to a parallel reality experience would be for generally lower INV scores than for a full immersion VR experience but without an accompanying drastic reduction in SP scores. An optimistic expectation for a well implemented parallel reality experience would be for lower INV scores and \textit{heightened} SP scores - that reinforcement of bodily actions within the RW environment lead to an increase in experienced spatial presence in the VR environment.
 
 Although a traditional view of augmented reality is that it aims to enhance the sense of presence in the physical world~\cite{Waterworth2014}, this does not necessarily stand as an aim of parallel reality. This is due to the fact that instead of augmenting the primary environment of the user's RW surroundings, parallel reality instead presents the user with two separate (debatably both or alternatingly `primary') environments.
 
@@ -1615,7 +1617,7 @@ However it is worth considering that while a default view that presents \textles
 
 \section{Best Practices for Parallel Reality}
 \label{best-practices-for-parallel-reality}
-The evaluations described in this and the preceding chapters have experimentally shown the value of the Mirrorshades platform and parallel reality in general as a new modality for the tandem exploration of real and virtual environments within the context of a cultural heritage site, as well as revealing a number of indicators toward best practices for future implementations of parallel reality. With the merit of the platform compared to a seated VR experience established by the stage 1 evaluation, the stage 2.1 and 2.2 evaluations explored different implementation details of the platform to inform the future development of similar systems, to allow the benefits promised by the concept to be best achieved.
+The evaluations described in this and the preceding chapter have experimentally proven the feasibility and shown the value of the Mirrorshades platform, and parallel reality in general, as a new modality for the tandem exploration of real and virtual environments using a cultural heritage site as a real world use case, as well as revealing a number of indicators toward best practices for future implementations of parallel reality. With the merit of the concept compared to a seated VR experience established by the stage 1 evaluation, the stage 2.1 and 2.2 evaluations explored different implementation details of the platform to inform the future development of similar systems, to allow the benefits promised by the concept to be best achieved.
 
 Stage 2.1 assessed participant responses to several different styles of performing transitions between the constituent RW and VR environments, with a transition which furnished participants with complete control over the percentage of the visual stimuli of each environment that were presented to them emerging the clear favourite. The introduction of brief automatic transitions from RW to VR was met negatively when assessed in terms of enjoyment and preference, but positively when assessed in terms of awareness and understanding of the relationship between the two environments.
 
